# claude-skills-collection

./: .gitignore  COMPLETION_SUMMARY.md  HOW_TO_USE.md  LICENSE  PROJECT_SUMMARY.md  PUSH_TO_GITHUB.md  QUICK_DEMO.md  QUICK_START.md  README.md  SETUP.md  USAGE_GUIDE.md  VERIFICATION_REPORT.md  registry.json  requirements-browser.txt
aeon/: SKILL.md
anndata/: SKILL.md
bgi-software-writing/: SKILL.md
citation-grabber/: .gitignore  README.md  SKILL.md  citation.py  pyproject.toml  requirements.txt
citation-grabber/tests/: __init__.py  test_citation.py  test_integration.py
citation-management/: SKILL.md
clinical-decision-support/: SKILL.md
clinical-reports/: SKILL.md
dask/: SKILL.md
data-analysis-workflow/: .gitignore  README.md  SKILL.md  USAGE_GUIDE.md
datacommons-client/: SKILL.md
docs/: add-external-skills.md  cross-platform-guide.md  getting-started.md  skills-store.md  symlink-vs-copy.md
generate-image/: SKILL.md
geopandas/: SKILL.md
hypothesis-generation/: SKILL.md
latchbio-integration/: SKILL.md
literature-review/: SKILL.md
market-research-reports/: SKILL.md
markitdown/: SKILL.md
modal/: SKILL.md
paper-2-web/: SKILL.md
peer-review/: SKILL.md
pennylane/: SKILL.md
perplexity-search/: SKILL.md
polars/: SKILL.md
pptx-posters/: SKILL.md
pufferlib/: SKILL.md
pymc/: SKILL.md
pytorch-lightning/: SKILL.md
research-grants/: SKILL.md
research-lookup/: SKILL.md
scientific-critical-thinking/: SKILL.md
scientific-schematics/: SKILL.md
scientific-slides/: SKILL.md
scientific-visualization/: SKILL.md
scientific-writing/: SKILL.md
scikit-learn/: SKILL.md
scikit-survival/: SKILL.md
scripts/: add-skill.sh  browse-skills.py  browse.py  browse.sh  check-upstream.sh  clawhub-api.py  create-skill.sh  explore-clawhub-api.py  install-all-link.sh  install-all.sh  install-link.sh  install-universal-link.sh  install-universal.sh  install.sh  list.sh  register.sh  set-upstream.sh  skill-store.py  status.sh  store.sh  uninstall.sh
scvi-tools/: SKILL.md
seaborn/: SKILL.md
shap/: SKILL.md
(+28 files in other folders)
